tests/baselines/reference/for-of42.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of42.ts(2,26): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of42.ts (1 errors) ====
    var array = [{ x: "", y: 0 }]
    for (var {x: a, y: b} of array) {
                             ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        a;
        b;
    }